# Uni10200

./: Condominio.h  Engine.cpp  Engine.h  ReadMe.txt  ReportBase.cpp  ReportBase.h  radiatore.cpp  radiatore.h  uni10200.rc  uni10200.vcxproj  utente.h
ripartitori/: letture.csv  template.csv
ripartitori/ripartitori/: CMakeLists.txt  letture.cpp  letture.h  main.cpp
ripartitori/ripartitori_v2/: CMakeLists.txt  Readme.md  letture.cpp  letture.h  main.cpp
ripartitori/ripartitori_v2/esempi/: letture_v2.csv  template_v2.csv
uni10200/: Condominio.cpp  Resource.h  stdafx.cpp  uni10200.cpp  uni10200.vcxproj.filters  utente.cpp
